--- a/app/assets/stylesheets/partials/pro.css.scss
+++ b/app/assets/stylesheets/partials/pro.css.scss
@@ -49,6 +49,11 @@
     border-radius: 3px;
     min-width: 200px;
     margin: 15px 0;
+
+    &[disabled] {
+      opacity: 0.6;
+      cursor: wait;
+    }
   }
   .gift-details {
     padding-left: 24px;
