--- a/app/frontend/app/templates/header/avatar.hbs
+++ b/app/frontend/app/templates/header/avatar.hbs
@@ -6,11 +6,11 @@
     <li>{{#link-to 'user' currentUser.id}}<i class="fa fa-paper-plane"></i> View Profile{{/link-to}}</li>
     <li>{{#link-to 'settings'}}<i class="fa fa-cog"></i> Account Settings{{/link-to}}</li>
     <li>
-      {{#if currentUser.isPro}}
+      {{#unless currentUser.isPro}}
         {{#link-to 'pro'}}<i class="fa fa-thumbs-o-up"></i> Upgrade to PRO{{/link-to}}
       {{else}}
         {{#link-to 'pro'}}<i class="fa fa-thumbs-o-up"></i> View PRO{{/link-to}}
-      {{/if}}
+      {{/unless}}
     </li>
     {{#if currentUser.isAdmin}}
       <li><a href="/kotodama"><i class="fa fa-rebel"></i> Kotodama</a></li>
