Update PRO application

--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -47,7 +47,7 @@
               {{#if isGift}}
                 <div class="gift-details">
                   <label>
-                    who should receive this gold?
+                    who should receive PRO?
                     <input id="recipient" type="text" name="recipient" value="" placeholder="Enter a username..." size="13" maxlength="20" class="inline">
                   </label>
                   <ul class="indent">
@@ -58,7 +58,7 @@
                     </label>
                     </li>
                     <li>
-                    <textarea rows="3" name="giftmessage" id="giftmessage" placeholder="Go ahead, say something clever..." class="giftmessage"></textarea>
+                    <textarea rows="1" name="giftmessage" id="giftmessage" placeholder="Go ahead, say something clever..." class="giftmessage"></textarea>
                     </li>
                   </ul>
                 </div>
@@ -119,7 +119,7 @@
         <div class="panel-body pro-panel">
         <div class="perks-header">
             <h3 class="perks-greeting">Awesome stuff from our PRO partners.</h3>
-            <small>Want your company to be a PRO partner? <a href="#">Apply here.</a></small>
+            <small>Want your company to be a PRO partner? <a href="https://hbrd.wufoo.com/forms/hummingbird-pro-partner-application/">Apply here.</a></small>
           </div>
           <ul class="pro-partners">
             {{#each partnerDeals itemController="partner-deal"}}
