--- a/app/frontend/app/templates/user.hbs
+++ b/app/frontend/app/templates/user.hbs
@@ -39,7 +39,7 @@
             <div class="bio-wrapper">
               <h2 class="username">
                 {{username}}
-                {{#if user.isPro}}
+                {{#if isPro}}
                   {{#link-to 'pro'}}<span class="profile-badge">pro</span>{{/link-to}}
                 {{/if}}
               </h2>
