Fix checkbox styling

--- a/app/assets/stylesheets/partials/pro.css.scss
+++ b/app/assets/stylesheets/partials/pro.css.scss
@@ -189,7 +189,7 @@
       margin: 0;
       font-weight: normal;
     }
-    input {
+    .gift-input {
       border-radius: 3px;
       box-shadow: none;
       border: 1px solid #ddd;
