--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -71,7 +71,7 @@
               {{#if isGift}}
                 <div class="gift-details">
                   <label>
-                    <input id="recipient" type="text" name="recipient" value="" placeholder="Enter a username..." size="13" maxlength="20" class="inline">
+                    <input class="gift-input" id="recipient" type="text" name="recipient" value="" placeholder="Enter a username..." size="13" maxlength="20" class="inline">
                   </label>
                   <ul class="indent">
                     <li>
@@ -81,7 +81,7 @@
                     </label>
                     </li>
                     <li>
-                    <textarea rows="1" name="giftmessage" id="giftmessage" placeholder="Go ahead, say something clever..." class="giftmessage"></textarea>
+                    <textarea rows="1" name="giftmessage" id="giftmessage" placeholder="Go ahead, say something clever..." class="giftmessage gift-input"></textarea>
                     </li>
                   </ul>
                 </div>
